testsuite/poke.pkl/eq-f64-diag-2.pk
/* { dg-do compile } */

var res
  = 1L .== (5 as int<31>); /* { dg-error "invalid operand .*" } */
